--- a/sustainability/src/main/webapp/resources/bootstrap/css/admin/admin.css
+++ b/sustainability/src/main/webapp/resources/bootstrap/css/admin/admin.css
@@ -3,9 +3,26 @@
   padding-right: 4px;
 }
 
-.panel-body, .panel-heading {
-	padding-top: 5px;
-	padding-bottom: 5px;
+.panel-body {
+	padding-top: 0px;
 	padding-left: 5px;
 	padding-right: 5px;
+}
+
+#search-header {
+	float: right;
+	padding-right: 10%;
+}
+
+#alias-header {
+	float: left;
+	padding-left: 2%;
+}
+
+.update-config-panel {
+	height: 30px;
+	padding-top: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-bottom: 2px;
 }
